--- a/less/about-page.less
+++ b/less/about-page.less
@@ -20,11 +20,6 @@
     border-radius: px;
 }
 
-main{
-    max-width: 75%;
-    margin: auto;
-}
-
 .bio{
     color: @nav-text;
     margin: 40px 0;
