--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,7 +1,7 @@
 // Navigation for mobile
 
 header{
-    width: 80%;
+    width: 90%;
     margin: auto;
     display: flex;
     justify-content: space-between;
